probably made this uglier but . . .

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -611,6 +611,12 @@ strong {
   padding: 0 20px;
 }
 
+.Absolute-Center {
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
+
 section img {
   max-width: 100%;
 }
@@ -723,7 +729,7 @@ dt {
   color: white;
   line-height: 50px;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
-  font-size: 14px;
+  font-size: 20px;
 }
 #header nav li a {
   color: white;
@@ -747,8 +753,8 @@ dt {
   background-color: #93bd20;
   padding: 10px 12px;
   margin-top: 6px;
-  line-height: 14px;
-  font-size: 14px;
+  line-height: 20px;
+  font-size: 20px;
   display: inline-block;
   text-align: center;
 }
@@ -775,9 +781,10 @@ dt {
   margin-left: 6px;
 }
 #header nav li.title {
-  float: right;
-  margin-right: 10px;
-  font-size: 11px;
+  float: center;
+  vertical-align: middle;
+  margin: auto;
+  font-size: 20px;
 }
 
 section {
