--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -131,6 +131,11 @@ html {
   /* 2 */
   -ms-text-size-adjust: 100%;
   /* 2 */
+  width: 100%;
+  height: 100%;
+  clip: auto;
+  position: absolute;
+  overflow: hidden;
 }
 
 /*
