--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -135,7 +135,7 @@ html {
   height: 100%;
   clip: auto;
   position: center;
-  vertical-align: middele;
+  vertical-align: middle;
   overflow: hidden;
 }
 
