--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -134,9 +134,14 @@ html {
   width: 100%;
   height: 100%;
   clip: auto;
-  position: center;
-  vertical-align: middle;
   overflow: hidden;
+  position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin: auto;
 }
 
 /*
