--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -610,7 +610,7 @@ strong {
 .wrapper {
   max-width: 650px;
   margin: 0 auto;
-  position: relative;
+  position: absolute;
   padding: 0 20px;
 }
 
