--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -152,6 +152,7 @@ textarea {
  */
 body {
   margin: 0;
+  position: center;
 }
 
 /* =============================================================================
