--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -802,7 +802,7 @@ section {
 section #title {
   border: 0;
   outline: none;
-  margin: 0 0 50px 0;
+  margin: 0 0 10px 0;
   padding: 0 0 5px 0;
 }
 section #title h1 {
@@ -824,7 +824,9 @@ section #title .credits {
   font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   color: #696969;
-  margin-top: -10px;
+}
+section #title .credits.center {
+  float: center;
 }
 section #title .credits.left {
   float: left;
