--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -390,7 +390,7 @@ fieldset {
 
 /*
  * 1. Corrects color not being inherited in IE6/7/8/9
- * 2. Corrects text not wrapping in FF3 
+ * 2. Corrects text not wrapping in FF3
  * 3. Corrects alignment displayed oddly in IE6/7
  */
 legend {
@@ -837,11 +837,11 @@ section #title .credits.right {
     text-align: center;
   }
   #title .credits .left {
-    float: none;
+    float: left;
     display: block;
   }
   #title .credits .right {
-    float: none;
+    float: right;
     display: block;
   }
 }
