--- a/stylesheets/fonts.css
+++ b/stylesheets/fonts.css
@@ -3,4 +3,4 @@
 font-family: BeatsByDre;
 src: url('BeatsByDre.woff'),
 }
-body .fontname { font-family: 'BeatsByDre'; }
+body.fontname { font-family: 'BeatsByDre' }
