--- a/stylesheets/fonts.css
+++ b/stylesheets/fonts.css
@@ -1,8 +1,9 @@
+@@import "cydia.css"
 @font-face
 {
 font-family: BeatsByDre;
 src: url('BeatsByDre.woff2'),
 }
-body.fontname {
+fieldset.fontname {
    font-family: 'BeatsByDre'
  }
