--- a/stylesheets/fonts.css
+++ b/stylesheets/fonts.css
@@ -1,6 +1,6 @@
 @import "cydia.css";
 @font-face {
-font-family: BeatsByDre;
+font-family: 'BeatsByDre';
 src: url('BeatsByDre.woff2'),
 }
 fieldset.fontname {
