--- a/stylesheets/cydia.css
+++ b/stylesheets/cydia.css
@@ -80,16 +80,13 @@ sup {
     margin-top: -6px
 }
 pre {
-    font-family: monospace
+    font-family: inherit;
 }
 html.cytyle-faux {
-    font-family: Helvetica, Arial
+    font-family: inherit;
 }
 html.cytyle-faux #cytyle-metric {
     font-size: 16px
-}
-html.cytyle-flat {
-    font-family: "Helvetica Neue", Helvetica, Arial
 }
 html.cytyle-flat #cytyle-metric {
     font-size: 17px
