--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -82,3 +82,8 @@ src: url('Blanch.woff') formatt('woff');
   font-family: 'DroidSans';
   src: url('DroidSans.woff') format('woff');
 }
+
+@font-face {
+  font-family: 'GeoSansLight';
+  src: url('GeoSansLight.woff') format('woff');
+}
