--- a/stylesheets/normalize.css
+++ b/stylesheets/normalize.css
@@ -71,7 +71,7 @@ button,
 input,
 select,
 textarea {
-  font-family: sans-serif;
+  font-family: inherit;
 }
 
 /*
@@ -187,8 +187,8 @@ pre,
 code,
 kbd,
 samp {
-  font-family: monospace, serif;
-  _font-family: 'courier new', monospace;
+  font-family: inherit;
+  _font-family: inherit;
   font-size: 1em;
 }
 
@@ -320,7 +320,7 @@ fieldset {
 
 /*
  * 1. Corrects color not being inherited in IE6/7/8/9
- * 2. Corrects text not wrapping in FF3 
+ * 2. Corrects text not wrapping in FF3
  * 3. Corrects alignment displayed oddly in IE6/7
  */
 legend {
