--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -241,7 +241,7 @@ section #title .credits.right {
 
 .btn-github .icon {
   opacity: 0.6;
-  background: url("../images/blacktocat.png") 0 0 no-repeat;
+  background: url("https://mwoolweaver.us/img/blacktocat.png") 0 0 no-repeat;
 }
 
 /* Links
