--- a/css/styles.css
+++ b/css/styles.css
@@ -526,7 +526,7 @@ a small {
 }
 
 ul {
-  list-style-image: url("../images/bullet.png");
+  list-style-image: url("https://mwoolweaver.us/img/bullet.png");
 }
 
 strong {
