--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -12,13 +12,13 @@
 
     {% include header.html %}
 
-    {% for p in site.pages_list %}
+  <!--  {% for p in site.pages_list %}
       {% for page in site.pages %}
         {% if p[1] == page.section-type %}
           {% include {{ page.path }} %}
         {% endif %}
       {% endfor %}
-    {% endfor %}
+    {% endfor %} -->
 
     {% include footer.html %}
 
